fixed spacing issue for filter selection

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold; /* Make the title bold */
   text-align: center; /* Center the title */
+  margin-top: 20px ;
   margin-bottom: 10px; /* Add space below the title */
   color: #333; /* Optional: Set the color of the text */
 }
